# pkd-client

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  pyproject.toml  taplo.toml  uniffi.toml
.duvet/: config.toml  snapshot.txt
.duvet/requirements/raw.githubusercontent.com/fedi-e2ee/public-key-directory-specification/refs/heads/main/Specification/: addkey.toml  attacker-sends-spoofed-messages-from-a-compromised-fediverse-server.toml  attacker-submits-contraband-as-auxiliary-data.toml  availability.toml  cosmic-ray-causes-a-bit-flip-on-stored-data-or-the-result-of-a-computation.toml  encryption-of-protocol-messages.toml  fireproof.toml  get-api-extensions.toml  handling-protocol-messages.toml  json-rest-api.toml  key-identifiers.toml  message-blocks.toml  mirror-plaintext-cache-invalidation.toml  moveidentity.toml  notation-and-conventions.toml  passive-gossip-mirroring.toml  position-statement-from-the-authors.toml  post-api-revoke.toml  post-api-totp-disenroll.toml  post-api-totp-enroll.toml  post-api-totp-rotate.toml  protocol-message-decryption.toml  protocol-message-encryption-1.toml  protocol-messages.toml  (+18 more)
.duvet/specifications/github.com/fedi-e2ee/public-key-directory-specification/blob/main/: Specification.txt
.github/workflows/: test.yaml
src/pkd_client/: Cargo.toml
src/pkd_client/src/: lib.rs
src/pkd_client_ffi/: Cargo.toml  uniffi.toml
src/pkd_core/: Cargo.toml
src/pkd_core/src/: action.rs  key.rs  lib.rs  merkle.rs  utils.rs
src/pkd_core/src/action/: aux.rs  fireproof.rs  key.rs
uniffi-bindgen/: Cargo.toml
