[package]
name = "pkd_client_ffi"
version = "0.1.0"
license = "MIT"
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "pkd"

[dependencies]
pkd_client = { path = "../pkd_client" }
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
